static/css/main.scss
$primary: #007bff;

html {
  font-family: sans-serif;
}

body {
  line-height: 1.4;
  margin-bottom: 5rem;

  @media(prefers-color-scheme: dark) {
    background-color: #121415;
    color: #e1dfdc;
  }
}

nav:not(#TableOfContents) {
  max-width: calc(720px + 128px * 2); // mascot.png
  margin: 1rem auto 0;
  display: grid;
  grid-template-rows: auto auto 1fr;
  grid-template-columns: auto 1fr;
  grid-template-areas:
    "logo header"
    "logo nav"
    "logo none";

  img {
    grid-area: logo;

    @media(prefers-color-scheme: dark) {
      filter: invert(.92);
    }
  }

  h1 {
    grid-area: header;
    margin: 0;
    padding: 0;
  }

  ul {
    grid-area: nav;
    margin: 0.5rem 0 0 0;
    padding: 0;
    list-style: none;
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    flex-wrap: wrap;

    li {
      padding-right: 1rem;
    }
  }
}

main {
  max-width: 720px;
  margin: 0 auto;

  @media(max-width: 1000px) {
    padding: 0;
  }
}


span {
  .c {
    color: #222;
    font-weight: bold;
  }

  .s2 {
    color: #484;
    font-style: italic;
  }

  .k, .kd, .nt, .nb {
    color: #008;
  }

  @media(prefers-color-scheme: dark) {
    .c {
      color: #999;
    }

    .s2 {
      color: #f79;
    }

    .k, .kd, .nt, .nb {
      color: #69f;
    }
  }
}

.alert {
  >p {
    margin: 0;
  }

  padding: 0.5rem;
  border: 1px solid transparent;
  margin-bottom: 1rem;
}

.alert-info {
  background: #d1ecf1;
  color: #0c5460;
  border-color: #bee5eb;
}

.alert-danger {
  color: #721c24;
  background-color: #f8d7da;
  border-color: #f5c6cb;
}

.alert-warning {
  color: #856404;
  background-color: #fff3cd;
  border-color: #ffeeba;
}

.alert-success {
  color: #155724;
  background-color: #d4edda;
  border-color: #c3e6cb;
}

a {
  color: $primary;

  &:visited {
    color: darken($primary, 25);
  }

  &:hover {
    text-decoration: none;
  }

  @media(prefers-color-scheme: dark) {
    color: #78bef8;

    &:visited {
      color: darken(#78bef8, 10);
    }
  }
}

.tutorial-link {
  text-decoration: none;
  border-bottom: 1.25px solid $primary;

  &:after {
    content: " ▶";
    border-bottom: 1.25px solid white;
  }

  @media(prefers-color-scheme: dark) {
    border-bottom: 1.25px solid #78bef8;

    &:after {
      content: " ▶";
      border-bottom: 1.25px solid #121415;
    }
  }

  &:hover {
    border-bottom: none;
  }
}

code {
  font-size: 1rem;
  background: #eee;
  padding: 0 0.3rem;

  @media(prefers-color-scheme: dark) {
    background: #16191c;
  }
}

pre code {
  font-size: inherit;
  padding: 0;
}

pre {
  background-color: #eee;
  padding: 0.25rem 1rem;
  margin: 0 -1rem;
  overflow-x: auto;

  @media(max-width: 1200px) {
    padding: 0;
    margin: 0;
  }

  .cp, .c1 {
    color: #222;
    font-weight: bold;
  }

  .kt {
    color: #44F;
  }

  .nt {
    color: #008;
  }

  .s, .s2, .sd, .s1 {
    color: #484;
    font-style: italic;
  }

  @media(prefers-color-scheme: dark) {
    background-color: #16191c;

    .kt {
      color: #3cf;
    }

    .s, .s2, .sd, s1 {
      color: #f79;
    }

    .mi {
      color: #aac;
    }

    .c1 {
      color: #999;
    }

    .cp {
      color: #db8;
    }


    .nt {
      color: #69f;
    }
  }
}

main img {
  display: block;
  margin: 0.5rem auto;  
}

table {
  width: 100%;
  border-collapse: collapse;

  th {
    text-align: left;
  }

  td, th {
    border-bottom: 1px solid black;
  }

  .yes, .todo {
    display: inline-block;
    width: 1rem;
    text-align: center;
  }

  .yes {
    color: green;
  }

  .todo {
    color: red;
  }
}

details {
  background: #eee;
  margin-top: 1rem;

  summary {
    cursor: pointer;
    padding: 0.5rem 1rem;
  }

  @media(prefers-color-scheme: dark) {
    background: #24272b;
  }

  &[open] {
    summary {
      background: #eee;
      margin: auto -0.5rem -0.5rem calc(-0.5rem - 5px);

      @media(prefers-color-scheme: dark) {
        background: #24272b;
      }
    }

    padding: 0 0.5rem 0 0.5rem;
    border-left: 5px solid #eee;
    background: white;

    @media(prefers-color-scheme: dark) {
      background: #121415;
      border-left: 5px solid #24272b;
    }
  }
}

.stub h2 {
  margin-bottom: 0;
}

h2 small {
  font-weight: normal;
  font-size: 1.2rem;
  display: block;
  border-bottom: 1px solid #555;
  margin-top: 0.5rem;
  color: #555;
}

h4 small {
  font-weight: normal;
  display: block;
  border-bottom: 1px solid #555;
  margin-top: 0.5rem;
  color: #555;
}

blockquote {
  border-left: 4px solid #888;
  margin-left: 0;
  padding-left: 1rem;
}

ol li {
  line-height: 1.3;

  &:not(:last-child) {
    margin-bottom: 0.35rem;
  }
}

#TableOfContents {
  border-left: 2px solid gray;
  padding-left: 0;

  details & {
    border-left: none;
  }

  ol li {
    margin: auto;
    line-height: auto;
  }
}

.code-tutorial {
  max-width: 1200px;

  .content {
    margin-bottom: 16rem;
    max-width: 1000px;
    margin: 0 auto;
  }

  section {
    display: grid;
    grid-template-rows: 1fr;
    grid-template-columns: 1fr 1fr;
    grid-template-areas:
      "header header"
      "details sample"
      ;
    margin-bottom: 12rem;
    grid-gap: 0 1rem;

    @media(max-width: 1200px) {
      display: block;

      .highlight pre {
        overflow-x: auto;
      }
    }

    & > * {
      grid-area: details;
    }

    & > h3 {
      grid-area: header;
    }

    .highlight {
      grid-area: sample;

      @media(min-width: 1200px) {
        pre {
          margin: 0;
        }
      }
    }

    .details {
      grid-area: details;

      @media(min-width: 1200px) {
        padding-right: 1rem;
      }

      p:first-child {
        margin-top: 0;
      }

      .alert {
        margin: 0;
      }
    }

    pre {
      overflow-x: auto;
    }
  }
}

dl {
  display: grid;
  grid-template-columns: auto 1fr;
  grid-gap: 0.2rem 1rem;

  dt {
    font-weight: bold;
    grid-column-start: 1;
  }

  dd {
    grid-column-start: 2;
    margin: 0;
  }
}

.htmlsample pre {
  margin-bottom: 1rem !important;
}

iframe, video {
  margin: 0 auto;
  display: block;
  max-width: 100%;
}

footer {
  text-align: center;
}

.image {
  width: 80%;

  img {
    display: block;
    margin: 0.5rem auto;
    max-width: 100%;
  }

  figure {
      margin: 0 20px 0 20px;
  }

  figcaption {
    margin: auto;
    width: 75%;
    text-align: center;
    font-size: 0.8rem;

    @media(prefers-color-scheme: dark) {
      color: #555;
    }

    @media (max-width: 768px) {
      width: 90%;
    }
  }

  @media (max-width: 768px) {
    width: 100%;
  }
}

.image-center {
  margin: auto;
  display: block;
}

.image-left {
  float: left;
  width: 50%;

  @media (max-width: 768px) {
    float: none;
    margin: auto;
    display: block;
    width: 100%;
  }
}

.image-right {
  width: 50%;
  float: right;

  @media (max-width: 768px) {
    float: none;
    margin: auto;
    display: block;
    width: 100%;
  }
}

